<resources>
    <string name="app_name">MyEdu</string>
    <string name="category1">Drinks</string>
    <string name="category2">Foods</string>
    <string name="category3">Fruits</string>
    <string name="category4">Animals</string>
    <string name="category5">Places</string>
    <string name="category6">Common objects</string>
    <string name="category7">Electronics</string>
    <string name="category8">Clothing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyEdu</string>
    <string name="nav_header_subtitle">Knowledge to all</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings"> Settings</string>

    <string name="menu_home">Profile</string>
    <string name="menu_gallery">Classes</string>
    <string name="menu_slideshow">Saved Courses</string>
    <string name="funQuiz">Fun Quiz</string>
    <string name="high_school">High School</string>
    <string name="top_icon">top icon</string>
    <string name="email">Email</string>
    <string name="password">* * * * * *</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="google_icon">Google icon</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="new_user_sign_up_now">New User? Sign Up Now</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="don_t_yet_have_an_account">Don\'t Yet Have An Account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="provide_your_account_s_email_for_which_you_want_to_reset_your_password">Provide your account\'s email for which you want to reset your password!</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="powered_by">Powered By Studio Five</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="classes">Classes</string>
    <string name="sign_out">Sign Out</string>
    <string name="options">Options</string>
    <string name="home">Home</string>
    <string name="profile_name">Profile name</string>
    <string name="username_title">Username</string>
    <string name="username">username</string>
    <string name="personal_mantra">Personal Mantra</string>
    <string name="personal_mantra_small">personal mantra</string>
    <string name="xp">XP</string>
    <string name="_50_000">50,000</string>
    <string name="friends">Friends</string>
    <string name="_100">100</string>
    <string name="s_t_u_d_i_o_f_i_v_e">S T U D I O  F I V E</string>
    <string name="search_text">Search...</string>
    <string name="profile_section">Profile</string>
    <string name="notes_section">Notes</string>
    <string name="featured_topics">Featured Topics</string>
    <string name="featured_topics_desc">These are the featured topics that are in demand!</string>
    <string name="most_viewed_topics">Most Viewed</string>
    <string name="view_all">View All</string>
    <string name="quiz_categories">Quiz Categories</string>
    <string name="dummy_text_calculus">Calculus</string>
    <string name="dummy_desc_calculus">The wonderful world of calculus, with functions, mappings and all.</string>
    <string name="sound_game">Sound Game</string>
    <string name="exit">Thank you for visiting.</string>
    <string name="msg_invite1">You are invited to download a cool educational application.</string>
    <string name="msg_invite2">Share</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="score">SCORE</string>
    <string name="done">DONE</string>
    <string name="loading">Loading...</string>
    <string name="image">ImageView</string>
</resources>