<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_home" />
    </group>


    <item android:title="@string/classes">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/preschool"
                    android:icon="@drawable/ic_child"
                    android:title="@string/preschool" />
                <item
                    android:id="@+id/highSchool"
                    android:icon="@drawable/ic_school"
                    android:title="@string/high_school" />
            </group>
        </menu>
    </item>


    <item android:title="@string/options">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_slideshow" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_sign_out"
                    android:title="@string/sign_out" />
            </group>
        </menu>
    </item>


</menu>