<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.ResetPasswordActivity"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/arrow_back_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forget_password"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/intro_title_color"
            android:textSize="40sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/provide_your_account_s_email_for_which_you_want_to_reset_your_password"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_gravity="center"/>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/textFieldLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="40dp"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"-->
<!--            app:boxBackgroundColor="@color/smoke_white"-->
<!--            app:boxStrokeColor="@color/intro_title_color"-->
<!--            app:boxStrokeWidthFocused="2dp"-->
<!--            android:hint="@string/email"-->
<!--            app:startIconDrawable="@drawable/ic_email"-->
<!--            app:startIconTint="@color/intro_title_color"-->
<!--            app:endIconMode="clear_text"-->
<!--            app:endIconTint="@color/intro_title_color"-->
<!--            android:textColorHint="@color/intro_title_color">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/reset_password_editText"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="@color/intro_title_color"/>-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <EditText
            android:id="@+id/resetPasswordEmailField"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:drawableLeft="@drawable/ic_email" />

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:background="@drawable/round_bg"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>